--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/forms.css">
+  <link rel="stylesheet" href="css/main-form.css">
  </head>
  <body>
      <header>
@@ -36,8 +36,42 @@
         <input type="email" name="Email" id="Email" placeholder="Email" required>
       </div>
       <div>
-        <input type="submit" value="Submit it!">
+        <label for="Address">Address</label><br>
+        <input type="text" name="Address" id="Address" placeholder="Address" required>
       </div>
+      <div>
+        <label for="State">State</label><br>
+        <select name="State" id="State" required>
+        <option value="">Please select state</option>  
+        <option value="AK">Alaska</option>
+        <option value="CA">California</option>
+        <option value="OR">Oregon</option>
+        <option value="WA">Washington</option>  
+        </select>
+      </div>
+      <div>
+      <fieldset>
+        <legend>Would you like to join our mailing list?</legend>
+        <label><input type="radio" name="JoinMailingList" value="Yes" required>Yes</label>
+        <label><input type="radio" name="JoinMailingList" value="No">No</label>
+      </fieldset>
+     </div>
+     <div>
+      <fieldset>
+        <legend>Interested In?</legend>
+        <label><input type="checkbox" name="InterestedIn" value="Website">Website</label><br>
+        <label><input type="checkbox" name="InterestedIn" value="OnlineCalendar">Online Calendar</label><br>
+        <label><input type="checkbox" name="InterestedIn" value="ContactForm">Contact Form</label><br>
+        <label><input type="checkbox" name="InterestedIn" value="Lollipops">Complimentary Lollipops</label><br>
+      </fieldset>
+     </div>
+     <div>
+      <label for="Comments">Comments</label><br>
+      <textarea name="Comments" id="Comments" placeholder="Comments" cols="36" rows="4"></textarea>
+     </div>
+     <div>
+        <input type="submit" value="Submit it!">
+     </div>
 
     </form>
   
